book suggestion app

--- a/app/views/categoryView.ejs
+++ b/app/views/categoryView.ejs
@@ -1,12 +1,13 @@
 <% include partials/template/head.ejs %>
+<% include partials/template/header.ejs %>
 <body>
 	<div class="container">
-		<div class="input-field col s12">
+    <h4 class="double-space">I'm looking for a book for a:</h4>
+		  <div class="input-field col s12">
     		<% include partials/template/categoryChoice.ejs %>	
   		</div>
 	</div>
 	<% include partials/template/jsdefaults.ejs %>
-
 </body>
-</html>
+
 
