--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -1,6 +1,8 @@
 <% include partials/template/head.ejs %>
+<% include partials/template/header.ejs %>
 <body>
 	<div class="container">
+	<h4>Access your selections:</h4>
 	<div class="row"></div>
 	<form action="/myLibrary" method="post"> 
 	<div class="row">
