--- a/app/views/partials/template/bookChoice.ejs
+++ b/app/views/partials/template/bookChoice.ejs
@@ -1,10 +1,23 @@
 <form action="/choice" method="post">
-	<select name="bookChoice">
-		<option value="" disabled selected>Choose a book:</option>
-		<option value="<%= bookChoices[0] %>"><%= bookChoices[0] %></option>
-		<option value="<%= bookChoices[1] %>"><%= bookChoices[1] %></option>
-	</select>
-	<input class="btn waves-effect waves-light" type="submit" value="Next Step">
+	<div class="row">
+	    <div class="col s12 m6 center-align">
+	      <input type="radio" name="bookChoice" value= "<%= bookChoices[0] %>" id="<%= bookChoices[0] %>" checked="checked"/>
+			<label for="<%= bookChoices[0] %>">
+				<img src="<%= bookData[0].items[0].volumeInfo.imageLinks.thumbnail %>" alt="book1" class="book-image" />
+				<p><%= bookData[0].items[0].volumeInfo.title %> by <%= bookData[0].items[0].volumeInfo.authors[0] %></p>
+				<p><%= bookData[0].items[0].volumeInfo.description %></p>
+			</label>
+	    </div>
+	    <div class="col s12 m6 center-align">
+	      <input type="radio" name="bookChoice" value= "<%= bookChoices[1] %>" id="<%= bookChoices[1] %>" />
+			<label for="<%= bookChoices[1] %>">
+				<img src="<%= bookData[1].items[0].volumeInfo.imageLinks.thumbnail %>" alt="book2" class="book-image" />
+				<p><%= bookData[1].items[0].volumeInfo.title %> by <%= bookData[1].items[0].volumeInfo.authors[0] %></p>
+				<p><%= bookData[1].items[0].volumeInfo.description %></p>
+			</label>
+	    </div>
+    </div>
+    <div class="row add-margin">
+    	<input class="btn waves-effect waves-light" type="submit" value="Next Step"><a class="add-margin" href="/category">or start over</a>
+    </div>
 </form>
-<br>
-<a href="/category" class="btn waves-effect waves-light">Start Over</a>
