--- a/app/views/categoryView.ejs
+++ b/app/views/categoryView.ejs
@@ -2,7 +2,7 @@
 <% include partials/template/header.ejs %>
 <body>
 	<div class="container">
-    <h4 class="double-space">I'm looking for a book for a:</h4>
+    <h3 class="double-space center-align">I'm looking for a book for a:</h3>
 		  <div class="input-field col s12">
     		<% include partials/template/categoryChoice.ejs %>	
   		</div>
