--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -3,28 +3,44 @@
 	<div id="index-banner" class="parallax-container valign-wrapper">
 		<div class="container">
 			<div class="row">
-				<h1 class="center">Open a book, open a mind.</h1>
+				<h1 class="center-align">Open a book, open a mind.</h1>
 			</div>
 			<div class="row">
-				<div class="col s12 center"><a class="hero-button" href="/category">Find a book</a></div>
+				<div class="col s12 center"><a class="hero-button" href="/category">Find a book</a>
+				</div>
 			</div>
 			<div>
-				<div class="col s12 center"><a class="hero-link" href="/login">Or log in</a></div>
+				<div class="col s12 center"><a class="hero-link" href="/login">Or log in</a>
+				</div>
 			</div>
 		</div>
-		<div class="parallax"><img src="/images/hero.jpg" alt="background image" class='hero'></div>
+		<div class="parallax"><img src="/images/hero.jpg" alt="background image" class='hero'>
+		</div>
 	</div>
 	<div class="container home-text">
-		<h1>Discover new books for your baby, toddler or preschooler.</h1>
-		<h3>Pick from a few books you might know, and we'll suggest one you might not.</h1>
+		<h1 class="center-align">Discover new books for your baby, toddler or preschooler.</h1>
+		<div class="carousel">
+		    <a class="carousel-item" href=""><img src="https://i.harperapps.com/covers/9780694016754/y648.png"></a>
+		    <a class="carousel-item" href=""><img src="http://images.penguinrandomhouse.com/cover/700jpg/9780399226908"></a>
+		    <a class="carousel-item" href=""><img src="http://d28hgpri8am2if.cloudfront.net/book_images/cvr9781416947370_9781416947370_hr.jpg"></a>
+		    <a class="carousel-item" href=""><img src="https://i.harperapps.com/covers/9780064431781/y648.png"></a>
+		    <a class="carousel-item" href=""><img src="https://i0.wp.com/books.disney.com/content/uploads/2013/09/9780786819881.jpg?w=604"></a>
+  		</div>
+		<h3 class="center-align">Pick from a few books you might know, and we'll suggest one you might not.</h3>
 	</div>
 	<div id="index-banner" class="parallax-container valign-wrapper">
-	<div class="row">
-				<div class="col s12 center"><a class="hero-button" href="/category">Find a book</a></div>
+		<div class="container">
+			<div class="row">
+				<h3 class="center-align">“The more that you read, the more things you will know. The more that you learn, the more places you'll go.” -Dr. Suess</h3>
 			</div>
-		<div class="parallax"><img src="/images/books.jpg" alt="background image" class='hero'></div>
+			<div class="row">
+				<div class="col s12 center"><a class="hero-button" href="/category">Find a book</a>
+				</div>
+			</div>
+		</div>
+		<div class="parallax"><img src="/images/books.jpg" alt="background image" class='hero'>
+		</div>
 	</div>
 	<% include partials/template/jsdefaults.ejs %>
 </body>
 </html>
-
