--- a/app/views/recommendView.ejs
+++ b/app/views/recommendView.ejs
@@ -1,15 +1,13 @@
 <% include partials/template/head.ejs %>
 <% include partials/template/header.ejs %>
+
 <body>
 	<div class="container">
-
-	<% include partials/content/choices.ejs %>
-	<% include partials/content/decision.ejs %>
-	
-
-	<br>
-	<h4>Want more recommendations? Save your choices!</h4>
-	<br>
+		<% include partials/content/choices.ejs %>
+		<% include partials/content/decision.ejs %>
+		<br>
+		<h4>Want more recommendations? Save your choices!</h4>
+		<br>
 	<form action="/save" method="post"> 
 		<div class="row">
 	    <form class="col s12">
@@ -32,7 +30,7 @@
 	  	<input class="btn waves-effect waves-light" type="submit" value="Next Step">
 		</form>
 	 </div>
+	 </div>
 
 	<% include partials/template/jsdefaults.ejs %>
 </body>
-</html>
