--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -10,10 +10,11 @@
     opacity: 0.7;
 }
 
+
 .nav-bar {
-	color: black;
+	color: white;
 	font-size: 30px;
-	background-color: white;
+	background-color: #87CAD0;
 }
 
 .nav-bar > i {
@@ -30,7 +31,7 @@ label {
 	padding-left: 0px !important;
 }
 
-.parallax-container h1, .parallax-container a {
+.parallax-container h1, .parallax-container h3, .parallax-container a {
 	color: white;
 	font-family: 'Raleway', sans-serif;
 }
@@ -38,13 +39,11 @@ label {
 .home-text h1 {
 	font-family: 'Josefin Slab';
 	font-weight: 700;
-	padding: .5em;
 }
 
 .home-text h3 {
 	font-family: 'Josefin Slab';
 	font-weight: 300;
-	padding: .5em;
 	padding-bottom: 1em;
 }
 
@@ -58,6 +57,14 @@ label {
 .hero-button:hover {
 	background-color: white;
 	color: black;
+}
+
+.hero-link  {
+	color: white;
+}
+
+.hero-link:visited {
+	color: white;
 }
 
 .hero-link:hover {
@@ -80,11 +87,15 @@ label {
 }
 
 .book-image:hover {
-	border: 3px solid #88B04B;
+	border: 4px solid #A6D188;
+}
+
+.selection-hover:hover {
+	background-color: rgba(143, 167, 178, 0.5);
 }
 
 input[type=radio]:checked + label>img {
-  border: 3px solid #88B04B;
+  border: 3px solid #A6D188;
   background-color: rgba(143, 167, 178, 0.6);
 }
 
@@ -107,10 +118,30 @@ input[type=radio]:checked + label>img {
 	padding: 2em;
 }
 
+.add-margin-2 {
+	padding-bottom: 1em;
+	padding-top: 1em;
+}
+
 .double-space {
 	padding-bottom: 1em;
 }
 
 .dark-background {
 	background-color: #e7e7e7
+}
+
+.fw-700 {
+	font-weight: 700;
+}
+
+span {
+	padding-right: 19px;
+}
+
+.logged-in {
+	background: #8FA7B2;
+	text-align: center;
+	width: 100%;
+	padding: 10px;
 }
