--- a/app/views/myLibrary.ejs
+++ b/app/views/myLibrary.ejs
@@ -1,17 +1,26 @@
 <% include partials/template/head.ejs %>
+<% include partials/template/header.ejs %>
+<% include partials/content/loggedIn.ejs %>
+
 <body>
 	<div class="container">
-	<% user.bookLikes %>
 
     <% include partials/content/choices.ejs %>
+    <% include partials/content/recommendations.ejs %>
 
-	<div>
-		<p>Start over to update your preferences:</p>	
-		<% include partials/template/categoryChange.ejs %>
-	</div>
-	<p>You are logged in as <%= user.email %></p>
+    <ul class="collapsible" data-collapsible="accordion">
+		<li>
+			<div class="collapsible-header"><i class="material-icons">mode_edit</i>Click to change your preferences</div>
+				<div class="collapsible-body">		
+					<p class="double-space"></p>
+					<% include partials/template/categoryChange.ejs %>
+				</div>
+		</li>
+	</ul>
 
-	<p>Click to delete your account:   <a name="<%= user.email %>" id="js-delete-user" class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">delete</i></a></p>
+	
+
+	<p><a name="<%= user.email %>" id="js-delete-user" class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">delete</i></a><span>   </span>Click to delete your account</p>
 
 	</div>
 	<% include partials/template/jsdefaults.ejs %>
