ES6ify code and add comments

--- a/app/views/partials/content/choices.ejs
+++ b/app/views/partials/content/choices.ejs
@@ -1,3 +1,4 @@
+<!-- Loops through array of current choices, and if greater than zero, displays them with an id as isbn that allows the API info to populate on the front end. -->
 
 <div class="row">
 	<% if (user.bookLikes.length > 0) { %>
