--- a/app/views/partials/content/loggedIn.ejs
+++ b/app/views/partials/content/loggedIn.ejs
@@ -1,8 +1,9 @@
+<!-- Displays whether or not a user is logged in. --> 
+
 <div class="row logged-in">
-	<% console.log(user.email) %>
 	<% if (user.email === undefined) { %>
 		<a href="/login" class="hero-link">You are not logged in.</a>
-		<% } else { %>
+			<% } else { %>
 		<a class="hero-link"> You are logged in as: <%= user.email %> </a>
 	<% } %>
 </div>
