--- a/app/views/partials/template/bookChoice.ejs
+++ b/app/views/partials/template/bookChoice.ejs
@@ -1,3 +1,6 @@
+<!-- Populates the front end with Google Book API data on choices from the back end function
+	used to retrieve it (Promises). --> 
+
 <form action="/choice" method="post">
 	<div class="row">
 	    <div class="col s12 m6 center-align selection-hover">
