--- a/app/views/partials/template/categoryChange.ejs
+++ b/app/views/partials/template/categoryChange.ejs
@@ -1,3 +1,5 @@
+<!-- Displays the category options when a user is logged in and wants to update preferences. If these are changed in the model, the values will need to be updated here. -->
+
 <form action="/category" method="post">
 	<div class="row">
 	    <div class="col s12 m4 center-align">
