--- a/app/views/partials/content/decision.ejs
+++ b/app/views/partials/content/decision.ejs
@@ -1,10 +1,12 @@
+<!-- Displays recommendation. -->
+
 <div class="dark-background">
-<div class="row">
-	<br>
-	<h5 class="col s12 center-align">We think you might like:</h5>
-	<br>
-</div>
-<div class="row">
-	<div class="col s12 request center-align" id="<%= decision %>"></div>
-</div>
+	<div class="row">
+		<br>
+		<h5 class="col s12 center-align">We think you might like:</h5>
+		<br>
+	</div>
+	<div class="row">
+		<div class="col s12 request center-align" id="<%= decision %>"></div>
+	</div>
 </div>
