--- a/app/views/partials/content/recommendations.ejs
+++ b/app/views/partials/content/recommendations.ejs
@@ -1,10 +1,12 @@
+<!-- When logged in, displays books that have been recommended. --> 
+
 <div class="dark-background">
-<div class="row">
-	<% if (user.bookRecs.length > 0) { %>
-		<h3 class="add-margin-2 center-align">Your recommendations:</h3>
-		<% for (i=0; i< user.bookRecs.length; i++) { %>
-			<div class="col s12 m4 request center-align" id="<%= user.bookRecs[i] %>"></div>
+	<div class="row">
+		<% if (user.bookRecs.length > 0) { %>
+			<h3 class="add-margin-2 center-align">Your recommendations:</h3>
+			<% for (i=0; i< user.bookRecs.length; i++) { %>
+				<div class="col s12 m4 request center-align" id="<%= user.bookRecs[i] %>"></div>
+			<% } %>
 		<% } %>
-	<% } %>
-</div>
+	</div>
 </div>
