--- a/app/views/updateView.ejs
+++ b/app/views/updateView.ejs
@@ -2,14 +2,11 @@
 <% include partials/template/header.ejs %>
 <body>
 	<div class="container">
-
 	<% include partials/content/choices.ejs %>
 	<% include partials/content/decision.ejs %>
-
-
-	<p>Save these to the profile for </p>
-	<%= user.email %>
-	<a name="<%= user.email %>" id="js-update-choices" class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">thumb_up</i></a>
+	<p id="js-updated">Save these selections to the profile for: </p>
+	<span><%= user.email %></span>
+	<a name="<%= user.email %>" id="js-update-choices" class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">thumb_up</i></a>	
 	</div>
 </body>
 <% include partials/template/jsdefaults.ejs %>
